@@ -1,0 +1,4 @@
+Thank you to the following (if we miss you please let us know):
+    
+    bdash - Advise on correct Python stuff (like indenting) & Providing code to fix the buffer processing.
+    Gian Mario Tagliaretti - For kindly letting us use his code as our base.
