@@ -63,3 +63,5 @@ NJ - 16/11/04 - Add mysql table create file...
 NJ - 16/11/04 - Somehow an IF statement got replaced with "hey" so it wouldn't work :(
 NJ - 16/11/04 - After advise all the tabs have being removed
 NJ - 05/12/04 - Updating the newline handling in the buffer thanks to bdash in #newzealand on freenode ;)
+NJ - 05/12/04 - Finished updating the newline handling (it works perfectly) once again, THANK YOU BDASH!
+NJ - 05/12/04 - Fix up !kick syntax error.
